# databricks-apx-deepagent-chat

./: .env.example  .gitignore  CLAUDE.md  README.ja.md  README.md  after-catalog-expand.yaml  app.yml  databricks.yml  package.json  pyproject.toml  tsconfig.json
.github/instructions/: project.md
assets/: AGENTS.md  system_prompt.md
assets/skills/python-exec/: SKILL.md
docs/superpowers/plans/: 2026-03-12-volume-explorer.md  lively-napping-narwhal.md
docs/superpowers/specs/: 2026-03-12-volume-explorer-design.md
scripts/: test_agent.py
src/apx_deepagent_chat/: _metadata.py  _version.py
src/apx_deepagent_chat/__dist__/: index.html
src/apx_deepagent_chat/__dist__/assets/: Match-Dz2Uzt25.js  QueryClientProvider-C3Zvtydl.js  angular-html--KSzdpw3.js  angular-html-m6SRLO_7.js  angular-ts-BN_8CTt4.js  angular-ts-Dx15ATmC.js  apl-CAguPOo0.js  apl-D__VJI0g.js  astro-BYxVg5nR.js  astro-Clthl9L_.js  avatar-DuUA_4s7.js  avatar-beHLp4L4.js  avatar-zeeY9d7j.js  badge-CtYzODTN.js  badge-rVkYYxzC.js  bird2-Bc66jNcT.js  blade-BJUfW_zU.js  blade-DZnSv9oR.js  bsl-BzB_g-Au.js  bsl-FmB7U2qd.js  bundle-mjs-BHMEIqtv.js  bundle-mjs-lckLV1Os.js  c-C4-pff_r.js  cairo-B5JMmIC0.js  cairo-W022uZ2A.js  card-wdVeeLZy.js  chat-RtLaGtWa.js  chat._threadId-Bn-_d4eX.js  chat._threadId-BtS-XEVf.js  chat._threadId-D1oPpb8h.js  chat._threadId-DJWuVU3f.js  chat.index-BJ11sAZY.js  chat.index-BR33dP8U.js  chat.index-ZLUtGJmI.js  chunk-FRKYWMV7-1JYwT3dE.js  chunk-FRKYWMV7-CY6MIVHG.js  chunk-FRKYWMV7-aT2giHuF.js  circle-alert-D6-pznGA.js  cobol-DXYjd2Xm.js  cobol-oHaF7zOq.js  (+186 more)
src/apx_deepagent_chat/assets/: AGENTS.md  hitl_whitelist.yaml  mcp_settings.yaml  models.yaml  subagents.yaml  system_prompt.md
src/apx_deepagent_chat/assets/skills/content-writing-workflow/: SKILL.md
src/apx_deepagent_chat/assets/skills/final-report-creator/: SKILL.md
src/apx_deepagent_chat/assets/skills/sub/article-writer/: SKILL.md
src/apx_deepagent_chat/assets/skills/sub/content-translator/: SKILL.md
src/apx_deepagent_chat/assets/skills/sub/deep-web-researcher/: SKILL.md
src/apx_deepagent_chat/assets/skills/sub/final-report-creator/: SKILL.md
src/apx_deepagent_chat/assets/skills/sub/web-researcher/: SKILL.md
src/apx_deepagent_chat/assets/skills/web-research-workflow/: SKILL.md
src/apx_deepagent_chat/assets/skills/web-researcher/: SKILL.md
src/apx_deepagent_chat/backend/: agent.py  agent_utils.py  app.py  chat_history.py  docx_tools.py  models.py  pdf_tools.py  pptx_tools.py  router.py  server.py  uc_backend.py  uc_checkpointer.py
src/apx_deepagent_chat/backend/agent/: __init__.py  clients.py  core.py  job_store.py  lc_tools.py  mcp_tools.py  middleware.py  model.py  model_loader.py  paths.py  reasoning_model.py  sqlite_job_store.py  stream.py  tools.py  uc_backend.py  uc_checkpointer.py
src/apx_deepagent_chat/backend/core/: _config.py  _defaults.py  _headers.py  _volume_path.py  dependencies.py
src/apx_deepagent_chat/backend/routers/: __init__.py  chat_history.py  config.py  files.py  system.py  volumes.py
src/apx_deepagent_chat/ui/: index.html
src/apx_deepagent_chat/ui/components/ai-elements/: tool.tsx
src/apx_deepagent_chat/ui/components/animate-ui/: primitives-base-accordion.tsx  primitives-base-files.tsx
src/apx_deepagent_chat/ui/components/apx/: logo.tsx  sidebar-layout.tsx  sidebar-user-footer.tsx
src/apx_deepagent_chat/ui/components/chat/: attachment-panel.tsx  generated-files.tsx  info-panel.tsx  settings-dialog.tsx  subagent-block.tsx  todo-panel.tsx  tool-approval.tsx  volume-explorer.tsx
src/apx_deepagent_chat/ui/components/ui/: alert.tsx  chart.tsx
src/apx_deepagent_chat/ui/config/: wait-messages.ts
src/apx_deepagent_chat/ui/lib/: api.ts  approval-mode.ts  pending-chat-job.ts  pending-files.ts
src/apx_deepagent_chat/ui/routes/: index.tsx
src/apx_deepagent_chat/ui/routes/_sidebar/: chat.$threadId.tsx  chat.index.tsx  chat.tsx  profile.tsx  route.tsx
src/apx_deepagent_chat/ui/styles/: globals.css
src/apx_deepagent_chat/ui/types/: routeTree.gen.ts
tests/: conftest.py
tests/api/: test_router_chat_history.py  test_router_config.py  test_router_files.py  test_router_volumes.py
tests/integration/: conftest.py  test_chat_history_integration.py
tests/unit/: test_agent_private.py  test_agent_utils.py  test_chat_history.py  test_init_agent.py  test_job_store.py  test_lc_tools.py  test_middleware.py  test_reasoning_model.py  test_sqlite_job_store.py  test_uc_backend.py
