[project]
name = "apx-deepagent-chat"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
    "databricks-sdk>=0.74.0",
    "databricks-langchain>=0.4.0",
    "langgraph>=0.2.0",
    "mlflow>=2.19.0",
    "python-dotenv>=1.0.0",
    "deepagents",
    "langchain-mcp-adapters>=0.1.11",
    "markitdown[all]>=0.1.4",
    "ddgs>=9.10.0",
    "uuid-utils>=0.9.0",
    "defusedxml>=0.7.1",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "pdf2image>=1.16.0",
    "pdfplumber>=0.10.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.12",
]

[tool.apx.metadata]
app-name = "apx-deepagent-chat"
app-slug = "apx_deepagent_chat"
app-entrypoint = "apx_deepagent_chat.backend.server:app"
api-prefix = "/api"
metadata-path = "src/apx_deepagent_chat/_metadata.py"

[tool.apx.ui]
root = "src/apx_deepagent_chat/ui"

[tool.apx.ui.registries]
"@animate-ui" = "https://animate-ui.com/r/{name}.json"
"@ai-elements" = "https://registry.ai-sdk.dev/{name}.json"
"@svgl" = "https://svgl.app/r/{name}.json"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.version]
path = "src/apx_deepagent_chat/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/apx_deepagent_chat/__dist__", "src/apx_deepagent_chat/_metadata.py"]
exclude = ["src/apx_deepagent_chat/ui"]
