[project]
name = "apx-deepagent-chat"
dynamic = ["version"]
description = "Databricks上で動作するマルチエージェント型チャットアプリ。Web調査とHTMLレポート生成をサポート。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.41.0",
    "pydantic-settings>=2.11.0",
    "databricks-sdk>=0.99.0",
    "databricks-langchain==0.17.0",
    "databricks-openai>=0.13.0",
    "databricks-agents>=1.9.3",
    "mlflow>=3.10.1",
    "deepagents>=0.4.11",
    "langchain-mcp-adapters>=0.2.1",
    "python-dotenv>=1.2.1",
    "markitdown[all]>=0.1.4",
    "ddgs>=9.10.0",
    "uuid-utils>=0.9.0",
    "databricks-connect>=16.1.7",
    "databricks-sdk>=0.97.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.12",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "anyio>=4.7.0",
]

[tool.apx.metadata]
app-name = "APX DeepAgent Chat"
app-slug = "apx_deepagent_chat"
app-entrypoint = "apx_deepagent_chat.backend.app:app"
api-prefix = "/api"
metadata-path = "src/apx_deepagent_chat/_metadata.py"

[tool.apx.ui]
root = "src/apx_deepagent_chat/ui"

[tool.apx.ui.registries]
"@animate-ui" = "https://animate-ui.com/r/{name}.json"
"@ai-elements" = "https://registry.ai-sdk.dev/{name}.json"
"@svgl" = "https://svgl.app/r/{name}.json"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.version]
path = "src/apx_deepagent_chat/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build]
artifacts = ["src/apx_deepagent_chat/__dist__", "src/apx_deepagent_chat/_metadata.py"]
exclude = ["src/apx_deepagent_chat/ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=src/apx_deepagent_chat/backend",
    "--cov-report=term-missing",
    "-v",
]
markers = [
    "integration: requires real Databricks (skip with '-m not integration')",
]

[tool.coverage.run]
omit = [
    "*/agent.py",
    "*/uc_checkpointer.py",
    "*/core/*",
]
